test/fixtures/config/theming/error/failToParseCliOpts/.gulp.js
module.exports = {
  log: {
    msgs: {
      error: {
        failToParseCliOpts: '**{1}**',
      },
    },
  },
};
